# heat-equation

./: .gitignore  build_s.sh
modules/: CMakeLists.txt
modules/Kirill/include/utils/: ts.h.in
modules/Sergey/: CMakeLists.txt  run.sh  setting2.ini
modules/Sergey/MPI/app/: CMakeLists.txt  Euler.c  Euler.cpp  Implicit.c
modules/Sergey/MPI/include/: SparseMatrix.h  Task.h
modules/Sergey/MPI/src/: SparseMatrix.c  SparseMatrix.cpp  Task.c
modules/Sergey/OpenMP/: CMakeLists.txt
modules/Sergey/OpenMP/app/: CMakeLists.txt  Eulel_old.cpp  Euler.c  Euler.cpp  Implicit.cpp  Runge.cpp
modules/Sergey/OpenMP/include/: SparseMatrix.h  SparseMatrix_cpp.h  StructDeclamer.h  Task.h  Task_cpp.h
modules/Sergey/OpenMP/src/: CMakeLists.txt  SparseMatrix.c  SparseMatrix.cpp  SparseMatrix_cpp.cpp  Task.c  Task.cpp  Task_cpp.cpp
result/Sergey/: Sergey_Euler2_full.txt  plot4D_S.py  time.txt
result/Sergey/AVX_Tests/: fault_mod.py
result/Sergey/Ethalon_Euler/: M_Euler_OpenMP_129_7_T_33.txt  Readme.md  setting2.ini
result/Sergey/Timings/Euler/: Euler_AVX.txt  Euler_Default.txt  Euler_Naive.txt  Euler_Naive_AVX.txt
result/Sergey/Timings/Implicit/: Implicit_AVX.txt  Implicit_Default.txt
result/Sergey/Timings/Runge/: Runge_AVX.txt  Runge_Default.txt
script/Sergey/: delscript.py  plot_faults.py
